# archived-sweetcomb

./: .gitignore  .gitreview  CMakeLists.txt  Dockerfile  INFO.yaml  LICENSE  Makefile  README.md  RELEASE.md
build-root/scripts/: checkstyle.sh  de_build.sh  docker.sh  installDeps.sh  scblder.sh
doc/: sweetcomb_structure_introduction.docx
samples/ietf-interfaces/: create-if.json  set-ip.xml
samples/ietf-nat/: create-instance.xml  create-mapping.xml
samples/openconfig-interfaces/: create-if.json  get-iface.xpath  get-subiface.xpath  set-enable.xml  set-ip.xml
samples/openconfig-local-routing/: add_route_with_iface.xml  add_route_with_nhop.xml  create-prefix-entry.json  get-prefix-nhop-interface.xpath  get-prefix-nhop.xpath  get-prefix.xpath
scripts/: Dockerfile  Test.Dockerfile  checkstyle.sh  docker.sh  fix-coding-style.el  run_test.sh
src/: CMakeLists.txt  README.md
src/cmake/: FindGRPC.cmake  FindJSONCPP.cmake  FindPUGIXML.cmake  FindVPP.cmake  Packager.cmake
src/gnmi/: CMakeLists.txt  eventreciverbase.h  gnmidata.cpp  gnmidata.h  gnmiserver.cpp  gnmiserver.h  log.cpp  log.h  main.cpp  sysrepoapi.cpp  sysrepoapi.h  sysrepoapipool.cpp  sysrepoapipool.h  xml2json.cpp  xml2json.h
src/gnmi/proto/: CMakeLists.txt  gnmi_ext.proto
src/plugins/: CMakeLists.txt  sc_init.c  sc_init.h  sc_interface.c  sc_interface.h  sc_model.c  sc_model.h  sc_plugins.c  sc_plugins.h  sys_util.c  sys_util.cpp  sys_util.h  vpp-interfaces.c
src/plugins/bapi/: bapi.c  bapi.h  bapi_interface.c  bapi_interface.h  bapi_ip.c
src/plugins/ietf/: ietf_interface.c  ietf_interface.cpp  ietf_interface.h  ietf_nat.c  ietf_nat.cpp  ietf_nat.h
src/plugins/if/: CMakeLists.txt  sc-interface-add-del-address@2018-10-31.yang  sc-interface-set-flags@2018-10-31.yang  sc_interface.c  sc_interface.h  sc_interface_add_del_address.c  sc_interface_set_flags.c
src/plugins/ip/: CMakeLists.txt  sc-ip-add-del-route@2018-10-31.yang  sc_ip.c  sc_ip.h  sc_ip_add_del_route.c
src/plugins/l2/: CMakeLists.txt  sc-l2-bridge-domain-add-del@2018-10-31.yang  sc-l2-interface-set-l2-bridge@2018-10-31.yang  sc_bridge_domain_add_del.c  sc_interface_set_l2_bridge.c  sc_l2.c  sc_l2.h
src/plugins/openconfig/: openconfig_interfaces.c  openconfig_interfaces.cpp  openconfig_interfaces.h  openconfig_local_routing.c  openconfig_local_routing.h  openconfig_plugin.c  openconfig_plugin.h  sys_util.c  sys_util.h
src/plugins/vpp-oper/: interface.cpp  interface.hpp
src/plugins/vxlan/: CMakeLists.txt  sc-vxlan-add-del-tunnel@2018-10-31.yang  sc_vxlan.c  sc_vxlan.h  sc_vxlan_add_del_tunnel.c
src/plugins/yang/: ietf-interfaces.data.xml
src/plugins/yang/ietf/: ietf-nat@2017-11-16.yang
src/plugins/yang/openconfig/: openconfig-bgp-global.yang  openconfig-extensions@2018-10-17.yang  openconfig-if-ethernet.yang  openconfig-inet-types@2017-08-24.yang  openconfig-interfaces.yang  openconfig-ospfv2-area-interface.yang  openconfig-terminal-device.yang  openconfig-transport-line-protection.yang
src/scvpp/: CMakeLists.txt  libscvpp.pc.in  scvpp.c  scvpp.h
src/scvpp/inc/scvpp/: comm.h  interface.h  ip.h  nat.h  v3po.h
src/scvpp/src/: CMakeLists.txt  comm.c  interface.c  ip.c  nat.c  sc_vpp_comm.c  sc_vpp_comm.h  sc_vpp_interface.c  sc_vpp_interface.h  sc_vpp_ip.c  sc_vpp_ip.h  sc_vpp_nat.c  sc_vpp_operation.h  sc_vpp_v3po.c  sc_vpp_v3po.h  v3po.c
src/scvpp/tests/: CMakeLists.txt  scvpp_iface_test.c  scvpp_ip_test.c  scvpp_nat_test.c  scvpp_nat_test.h  scvpp_test.c  scvpp_test.h
src/srvpp/: CMakeLists.txt  libsrvpp.pc.in
src/srvpp/src/: CMakeLists.txt  srvpp.c  srvpp.h  srvpp_logger.c  srvpp_logger.h
src/srvpp/tests/: CMakeLists.txt  srvpp_test.c
test/: framework.py  framewrok.py  interface.txt  ip_route.txt  l2.txt  log.py  netconf_client.py  netopeer_controler.py  run_test.py  run_test.sh  test_ietf_interfaces.py  test_oc_interfaces.py  test_restart_managment.py  topology.py  util.py  vpp_controler.py  vppctl.py  vxlan_add_del_tunnel.txt
test/conf/: ietf-interfaces.xml  vpp.conf
